--- a/_posts/2009-10-22-mockups.textile
+++ b/_posts/2009-10-22-mockups.textile
@@ -29,7 +29,7 @@ We also have two other major concerns about the UI. First, we want to easily fac
 
 <a href="/images/sentence_pairs_translating.png"><img src="/images/shrunk/sentence_pairs_translating.png" /></a>
 
-*Interestingly, I have found the tools for sentence splitting somewhat lacking and also somewhat diverse.*
+_Interestingly, I have found the tools for sentence splitting somewhat lacking and also somewhat diverse._
 
 h2. Correcting translations
 
