Addressed confusion towards the end about NLTKs involvement in the Urdu splitter. \(eg. there is none\)

--- a/_posts/2009-10-25-perl-to-python-urdu-splitter.textile
+++ b/_posts/2009-10-25-perl-to-python-urdu-splitter.textile
@@ -65,6 +65,8 @@ h2. urdu_segmenter.py vs. NLTK
 
 A particular difference between this splitter and NLTK's is the use of regex. Splitting on a period, in English, is not going to perfect. For example, it will choke on "I think Washington D.C. is neato." NLTK's punkt is based off machine learning techniques so it handles this better, but I found it is also not perfect. For example, NLTK will also choke on "I think Washington D.C. is neato." but it will handle "I think Washington D. C. is neato" just fine. The difference being the space between D. and C. in the sentence.
 
+Ideally, NLTK would handle all the tokenization but there is no support for Urdu splitting in NLTK at the time of this writing. I intend to look into how one trains NLTK on sentence segmentation soon though.
+
 I would really like some feedback on people's views of sentence splitting if anyone is interested. Please "email":mailto:jdennis@gmail.com me.
 
 <script src="http://gist.github.com/218198.js"></script>
