removed semicolon which was tripping up github

--- a/_posts/2009-11-10-before-and-after-mturk.textile
+++ b/_posts/2009-11-10-before-and-after-mturk.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: My face: before and after Mechanical Turk
+title: My face before and after Mechanical Turk
 ---
 
 h1. {{ page.title }}
