--- a/_posts/2009-11-10-its-been-a-little-while.textile
+++ b/_posts/2009-11-10-its-been-a-little-while.textile
@@ -25,7 +25,7 @@ I was contacted by a friend of mine at The New York Times and was asked if I'd l
 
 After a couple meetings we decided we'd build a system to help spread our message across Facebook, Twitter and Flickr. John Merlino, a designer from <a href="http://www.freshthrills.com">FRESHTHRILLS</a>, whom I've worked on multiple projects with, worked on the graphics and I did the programming for what eventually became known as Robin Hood's I Fed page.
 
-We had a successful launch on Monday and the message flew through Twitter. You can see it's message propagated by <a href="http://twitter.com/#search?q=%23feednyc">searching for #feednyc</a> or by <a href="http://ifed.robinhood.org">simply visiting the IFed page</a>. It's success has led to John and myself being disignated cochairs of the fund-raising event on Thursday, which Tiki Barber of the New York Giants will be hosting.
+We had a successful launch on Monday and the message flew through Twitter. You can see it's message propagated by <a href="http://twitter.com/#search?q=%23feednyc">searching for #feednyc</a> or by <a href="http://ifed.robinhood.org">simply visiting the IFed page</a>. It's success has led to John and myself being designated cochairs of the fund-raising event on Thursday, which Tiki Barber of the New York Giants will be hosting.
 
 If you're feeling philanthropic and can part with some money, please head over to <a href="http://ifed.robinhood.org">ifed.robinhood.org</a> for more information on how you can help. You can also get up-to-the-minute listings on what the twitter world is saying about Robin Hood's holiday message. If you can't spare any money this winter, please just spread the message using our Twitter or Facebook tools on the left side of the page.
 
