Added code tags

--- a/_posts/2009-11-24-pyfacebook-idl-web-apis.textile
+++ b/_posts/2009-11-24-pyfacebook-idl-web-apis.textile
@@ -35,7 +35,7 @@ The <a href="http://github.com/sciyoshi/pyfacebook">pyfacebook</a> module by <a 
 
 If you check the <a href="http://github.com/sciyoshi/pyfacebook/blob/master/facebook/__init__.py">pyfacebook code itself</a>, you'll see the IDL start with the declaration of METHODS (line 116 at the time of this writing). We see a dictionary of dictionary's. The outermost dictionary's represent a namespace, like photos-related functions or admin-related functions. The next layer of dictionary's, inside a namespace, represent the functions offered by that namespace and inside each of those is a list of tuple's representing the argument list.
 
-The tuple's consist of the argument name, the type, and any flags for describing the variable. It's common to see ('pid', int, []) or ('page_ids','list',['optional']). This entire list is iterated upon in __generate_proxies() where the transformation from IDL to actual functions takes place. This function reads the language definition and generates Python code from the list contents, calls eval() on the code and instantiates the objects from the generated code. Dynamic languages for the win!
+The tuple's consist of the argument name, the type, and any flags for describing the variable. It's common to see <code>('pid', int, [])</code> or <code>('page_ids','list',['optional'])</code>. This entire list is iterated upon in <code>__generate_proxies()</code> where the transformation from IDL to actual functions takes place. This function reads the language definition and generates Python code from the list contents, calls <code>eval()</code> on the code and instantiates the objects from the generated code. Dynamic languages for the win!
 
 The actual generated code looks something like what's below. Notice that every function essentially returns their name and a dictionary of arguments that have been processed. Something neat about this code is that it actually generates documentation for all the IDL's objects too but the documentation simply directs the programmer to Facebook's documentation.
 
