--- a/_posts/2009-11-24-pyfacebook-idl-web-apis.textile
+++ b/_posts/2009-11-24-pyfacebook-idl-web-apis.textile
@@ -15,7 +15,7 @@ I have worked with many web API's and have had some wonderful experiences and al
 
 The code above shows my latest tweet telling people to check out my friend's band, <a href="http://helenearthband.bandcamp.com/">Helen Earth Band</a>. As you can see, it was easy enough to get some data from twitter in an easy to use structure.
 
-<a href="http://apiwiki.twitter.com/Twitter-Search-API-Method%3A-search">Twitter's search API</a> is fairly straight forward but demonstrates a few of the common themes found in a web API. The function and data format are both components of the URL: http://search.twitter.com/*search*.*json*?q=j2labs&rpp=1. If I wanted to check twitter's trends and get XML I would search my query to http://search.twitter.com/trends.xml.
+<a href="http://apiwiki.twitter.com/Twitter-Search-API-Method%3A-search">Twitter's search API</a> is fairly straight forward but demonstrates a few of the common themes found in a web API. The function and data format are both components of the URL: http://search.twitter.com/*search*.*json*?q=j2labs&rpp=1. If I wanted to check twitter's trends and get XML I would search my query to http://search.twitter.com/*trends*.*xml*.
 
 As you might guess, implementing a web API primarily consists of creating ways to pass arguments to URL's. There is sometimes some session oriented stuff and complexity in handling files, but that's beyond the scope of this post. For API's which are in beta (eg. most of them...) you may have to deal with changing behavior over time. Wikipedia's API, for example, is currently in beta. So is Mechanical Turk's, which I'll be writing about after I finish this post.
 
