--- a/_posts/2009-11-25-first-thoughts-mturk-api.textile
+++ b/_posts/2009-11-25-first-thoughts-mturk-api.textile
@@ -56,9 +56,7 @@ Chris and I have been discussing MTurk for a little while with the goal of match
 
 After going through boto I couldn't find anything for putting this information in. I tried simply putting it in the first Question instance out of the list, but then Amazon rejected the HTML formatting. Ah ha! There is a FormattedContent field in the QuestionContent class. So I tried that and found that boto actually prints formatted content <i>after</i> the question text. Having the order of elements forced on me seemed strange, but I figured I'd move on and try something new. I tried setting up a Question instance that consisted of only the formatted content, to hold the header info, but Amazon didn't like that.
 
-I started searching around for any help that might exist with mturk and boto when I came across <a href="http://code.google.com/p/boto/issues/detail?id=279#c0">this email</a>, from the one and only <a href="http://en.wikipedia.org/wiki/Aaron_Swartz">Aaron Swartz</a>. 
-
-On Oct. 10th of this year Aaron wrote <i>The create_hit code in boto's mturk module seems to be looking for the completely wrong elements. I don't see how it could ever have worked...</i> This tells me two things. 1) The codebase is really new and not tested and 2) I can't be sure the current codebase is even a complete implementation of Mechanical Turk.
+I started searching around for any help that might exist with mturk and boto when I came across <a href="http://code.google.com/p/boto/issues/detail?id=279#c0">this email</a>, from the one and only <a href="http://en.wikipedia.org/wiki/Aaron_Swartz">Aaron Swartz</a>. On Oct. 10th of this year Aaron wrote <i>The create_hit code in boto's mturk module seems to be looking for the completely wrong elements. I don't see how it could ever have worked...</i> This tells me two things. 1) The codebase is really new and not tested and 2) I can't be sure the current codebase is even a complete implementation of Mechanical Turk.
 
 So I went back to the documentation to look for clues. I found the Overview tag. This tag is basically a freeform way of including data at the top of a HIT. PERFECT! I have submitted a patch for boto to implement Overview support as described by the docs. It is currently <a href="http://code.google.com/p/boto/issues/detail?id=298">issue 298</a> on the issues list and I hope it gets accepted soon. While reading the docs I found that the formatted content ordering I mentioned two paragraphs above is actually incorrect too, so I also patched that. <i>That</i> patch is <a href="http://code.google.com/p/boto/issues/detail?id=299">issue 299</a>.
 
